[gd_scene load_steps=8 format=2]

[ext_resource path="res://Pacotes/Hitbox_Macaco.tscn" type="PackedScene" id=1]
[ext_resource path="res://Pacotes/Macaco/Macaco_script.gd" type="Script" id=2]
[ext_resource path="res://sprite/macaco png/macaco-Sheet.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.7755, 22.3884 )

[sub_resource type="Animation" id=2]
resource_name = "Danao"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25, 18, 26 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Morto"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[node name="Macaco" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 9
vframes = 3
frame = 18

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 3.565, 0.944942 )
shape = SubResource( 1 )

[node name="Hitbox_Macaco" parent="." instance=ExtResource( 1 )]
position = Vector2( 3.14981, -23.9385 )

[node name="anims" type="AnimationPlayer" parent="."]
anims/Danao = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Morto = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -13.6076, 1.05946 )
scale = Vector2( 1, 5 )
enabled = true
cast_to = Vector2( -20, 0 )

[connection signal="body_entered" from="Hitbox_Macaco" to="." method="_on_Hitbox_Macaco_body_entered"]
[connection signal="animation_finished" from="anims" to="." method="_on_anims_animation_finished"]
